Implemented pages for Contacts and Courses

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script defer src="src/app.js" type="module"></script>
 </head>
 
@@ -42,17 +45,8 @@
     </section>
     <section class="main-section">
         <div id="container">
-            <div id="contacts">
-                <div class="contact-section">
-                    <h2>Contact me via email</h2>
-                    <p>mlados43@gmail.com</p>
-                </div>
-                <div class="contact-section">
-                    <h2>Or social media</h2>
-                    <div class="socials">
-
-                    </div>
-                </div>
+            <div id="home">
+                <h2>Welcome, nice to meet you</h2>
             </div>
         </div>
     </section>
