New color pallet, added Skills page, modified information in other pages

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <section class="navigation-section">
         <div>
-            <img src="images/person.png" alt="Mladen Nedev">
+            <img src="images/person-real.png" alt="Mladen Nedev">
             <h2>Mladen Nedev</h2>
         </div>
         <div>
@@ -46,8 +46,15 @@
     <section class="main-section">
         <div id="container">
             <div id="home">
-                <h2>Welcome, nice to meet you</h2>
+                <h2>Hello, nice to meet you. I am</h2>
+                <h1>MLADEN.</h1>
+                <p>
+                    Programmer, a professional who writes code to create software and computer programs. I use
+                    programming languages such as Python, Java, C++, and more to design, develop, test and maintain
+                    various software applications and systems.
+                </p>
             </div>
+        </div>
         </div>
     </section>
 </body>
