Making elements responsive

--- a/index.html
+++ b/index.html
@@ -16,46 +16,48 @@
 </head>
 
 <body>
-    <section class="navigation-section">
-        <div>
-            <img src="images/person-real.png" alt="Mladen Nedev">
-            <h2>Mladen Nedev</h2>
-        </div>
-        <div>
-            <nav>
-                <ul>
-                    <li>
-                        <button>Home</button>
-                    </li>
-                    <li>
-                        <button>About Me</button>
-                    </li>
-                    <li>
-                        <button>Skills</button>
-                    </li>
-                    <li>
-                        <button>Courses</button>
-                    </li>
-                    <li>
-                        <button>Contacts</button>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </section>
-    <section class="main-section">
-        <div id="container">
-            <div id="home">
-                <h2>Hello, nice to meet you. I am</h2>
-                <h1>MLADEN.</h1>
-                <p>
-                    Programmer, a professional who writes code to create software and computer programs. I use
-                    programming languages such as Python, Java, C++, and more to design, develop, test and maintain
-                    various software applications and systems.
-                </p>
+    <section class="wrapper">
+        <section class="navigation-section">
+            <div>
+                <img src="images/person-real.png" alt="Mladen Nedev">
+                <h2>Mladen Nedev</h2>
             </div>
-        </div>
-        </div>
+            <div>
+                <nav>
+                    <ul>
+                        <li>
+                            <button>Home</button>
+                        </li>
+                        <li>
+                            <button>About Me</button>
+                        </li>
+                        <li>
+                            <button>Skills</button>
+                        </li>
+                        <li>
+                            <button>Courses</button>
+                        </li>
+                        <li>
+                            <button>Contacts</button>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </section>
+        <section class="main-section">
+            <div id="container">
+                <div id="home">
+                    <h2>Hello, nice to meet you. I am</h2>
+                    <h1>MLADEN.</h1>
+                    <p>
+                        Programmer, a professional who writes code to create software and computer programs. I use
+                        programming languages such as Python, Java, C++, and more to design, develop, test and maintain
+                        various software applications and systems.
+                    </p>
+                </div>
+            </div>
+            </div>
+        </section>
     </section>
 </body>
 
